--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "react-extension-boilerplate",
+  "name": "react-chrome-extension-boilerplate",
   "version": "1.0.0",
   "description": "Boilerplate to build chrome extensions using react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --watch --progress --config webpack.config.js"
   },
   "author": "Reet Priye",
   "license": "UNLICENSED",
   "dependencies": {},
   "devDependencies": {
     "react": "^17.0.2",
-    "typescript": "^4.4.4"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1"
   }
 }
