--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "license": "UNLICENSED",
   "dependencies": {},
   "devDependencies": {
+    "copy-webpack-plugin": "^9.1.0",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.64.1",
