--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "UNLICENSED",
   "dependencies": {},
   "devDependencies": {
+    "@types/chrome": "0.0.164",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
