--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-chrome-extension-boilerplate",
   "version": "1.0.0",
   "description": "Boilerplate to build chrome extensions using react",
-  "main": "index.js",
   "scripts": {
-    "build": "webpack --watch --progress --config webpack.config.js"
+    "start": "webpack --watch --progress --config webpack.dev.js",
+    "build": "webpack --watch --progress --config webpack.prod.js"
   },
   "author": "Reet Priye",
   "license": "UNLICENSED",
@@ -13,6 +13,7 @@
     "@types/chrome": "0.0.164",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
@@ -22,6 +23,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-merge": "^5.8.0"
   }
 }
